# wordnik

./: Cargo.toml  README.md
resource/: etymologies.json  response.json  sample_response.json
src/: args.rs  error.rs  lib.rs  model.rs  parameters.rs
src/args/: definitions.rs  random.rs
